[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/code/cc_level/t-rex.gd" type="Script" id=1]
[ext_resource path="res://assets/art/cc_level/sprites/S34_t-rex/S34_t-rex-Sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/object_sounds/SD21_sword_hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/gui/hud/enemy_healthbar.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 19.3225

[node name="t-rex" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.0229 )
shape = SubResource( 8 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 15, 25 )
collision_mask = 8

[node name="sword_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="healthbar" parent="." instance=ExtResource( 4 )]
[connection signal="death" from="." to="." method="_on_t_rex_death"]
[connection signal="health_changed" from="." to="." method="_on_t_rex_health_changed"]
